# hackhpi26

./: README.md  dump_samples.py  pyproject.toml  test_output.txt
backend/: Makefile  README.md  main.py  reporting.py  requirements.txt  yolo_tracker.py
backend/data/: visual_data_fixture.json
backend/data/uploads/7c32e36250cd456c97fe243796462d08/: metadata.json
backend/src/agri_nav/: __init__.py  demo_scene.py
backend/src/agri_nav.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/src/agri_nav/dto/: config.py  perception.py
backend/src/agri_nav/logic/: __init__.py  apf_longitudinal.py
backend/tests/: test_apf_lateral.py  test_apf_longitudinal.py  test_sgg_processor.py
data/kaggle/: README.md
frontend/: HACKATHON_INFO.md  README.md  init.md
frontend/src/: index.css
frontend/src/data/: mockVisionRun.json  requests.ts
frontend/src/pages/: main.tsx
kai/: .gitignore  init.md  instructions.md  pyproject.toml
kai/src/agri_nav/: __init__.py
kai/tests/: test_apf_lateral.py  test_apf_longitudinal.py  test_integration.py
ml_tracker/: yolo_tracker.py
src/agri_nav.egg-info/: requires.txt
src/agri_nav/dto/: __init__.py  config.py  control.py  perception.py  visualization.py
src/agri_nav/logic/: apf_lateral.py  sgg_inference.py  sgg_processor.py
src/agri_nav/mapper/: __init__.py  tracker_csv.py
src/agri_nav/service/: apf_service.py  sgg_service.py
src/agri_nav/viz/: __init__.py  viz_apf_field.py  viz_mock_sgg.py  viz_sgg_graph.py
tests/: __init__.py  test_integration.py  test_sgg_inference.py  test_sgg_processor.py
(+39 files in other folders)
